test/integration/bad/embedded_laplace/missing_args1.stan
model {
  target += laplace_marginal();
}
